Update repository structure for new library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,5 @@
-[package]
-name = "ogc-sys"
-version = "0.1.0"
-authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies.libc]
-git = "https://github.com/rust-wii/libc.git"
-branch = "wii"
-default-features = false
-optional = true
-
-[features]
-default = ["libc"]
+[workspace]
+members = [
+    "ogc-sys",
+    "ogc-rs"
+]
