--- a/ogc-rs/Cargo.toml
+++ b/ogc-rs/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 crate-type = ["rlib"]
 name = "ogc"
 
+[dependencies]
+bitflags = "1.1"
+
 [dependencies.ogc-sys]
 path = "../ogc-sys"
-version = "0.1.0"
+version = "0.1"
 
