--- a/ogc-rs/Cargo.toml
+++ b/ogc-rs/Cargo.toml
@@ -11,9 +11,9 @@ name = "ogc"
 [dependencies]
 bitflags = "1.2"
 
-[dependencies.enum_primitive]
-version = "0.1"
-git = "https://github.com/FrictionlessPortals/enum_primitive-rs.git"
+[dependencies.num_enum]
+version = "0.5"
+default-features = false
 
 [dependencies.ogc-sys]
 path = "../ogc-sys"
