--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,9 @@ jobs:
       image: "devkitpro/devkitppc"
     steps:
       - name: Install required packages
-        run: sudo apt-get install -y gcc libc6-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libc6-dev nodejs clang
 
       - name: Checkout sources
         uses: actions/checkout@v2
