--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,19 @@
-[workspace]
-members = [
-    "ogc-sys",
-    "ogc-rs"
-]
+[package]
+name = "ogc-rs"
+version = "0.7.1"
+authors = ["rust-wii"]
+edition = "2018"
+
+[lib]
+crate-type = ["rlib"]
+
+[features]
+ffi = []
+
+[dependencies]
+bitflags = "1.2"
+num_enum = { version = "0.5", default-features = false }
+
+libc = "0.2"
+ogc-sys = { version = "0.4.2", path = "ogc-sys" }
+
