--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ ffi = []
 [dependencies]
 bitflags = "1.2"
 num_enum = { version = "0.5", default-features = false }
+cfg-if = "1.0"
 
 libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
