--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bitflags = "1.2"
 num_enum = { version = "0.5", default-features = false }
 cfg-if = "1.0"
 
+libm = "0.2"
 libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
 
