--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ cfg-if = "1.0"
 libm = "0.2"
 libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
-
+glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
