--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ libm = "0.2"
 libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
+voladdress = "0.4"
