--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ crate-type = ["rlib"]
 ffi = []
 
 [dependencies]
-bitflags = "1.2"
+bitflags = "1.3"
 num_enum = { version = "0.5", default-features = false }
 cfg-if = "1.0"
+cstr_core = "0.2"
 
 libm = "0.2"
 libc = "0.2"
