add lwp mutexes
reasons to use lock_api:
+ simple implementation
+ convenient for others relying on its api

reasons to not use lock_api:
+ doesn't handle fallability in case something doesn't work.
+ requires static lock initialization, which libogc cannot do since locks
  are allocated at runtime.
+ no trait to implement a re-entrant mutex, only pre-existing library
  implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "0.4"
+#lock_api = "0.4.5"
