--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "ogc-rs"
 version = "0.7.1"
 authors = ["rust-wii"]
 edition = "2021"
+license = "MIT"
+readme = "README.md"
+description = "A Rust wrapper library for devkitPro's libogc"
+documentation = "https://docs.rs/ogc-rs/"
+homepage = "https://github.com/rust-wii/ogc-rs"
+repository = "https://github.com/rust-wii/ogc-rs"
+keywords = ["wii", "embedded", "no-std"]
 
 [lib]
 crate-type = ["rlib"]
