--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ogc-rs"
-version = "0.7.1"
+version = "0.1.0"
 authors = ["rust-wii"]
 edition = "2021"
 license = "MIT"
@@ -25,7 +25,7 @@ cstr_core = "0.2"
 
 libm = "0.2"
 libc = "0.2"
-ogc-sys = { version = "0.4.2", path = "ogc-sys" }
+ogc-sys = "0.1.0"
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "0.4"
 #lock_api = "0.4.5"
