--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ libc = "0.2"
 ogc-sys = { version = "0.4.2", path = "ogc-sys" }
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "0.4"
+bit_field = "0.10.1"
 #lock_api = "0.4.5"
