--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ crate-type = ["rlib"]
 
 [features]
 ffi = []
+mmio = []
+glam_compat = ["glam"]
 
 [dependencies]
 bitflags = "1.3"
 num_enum = { version = "0.5", default-features = false }
 cfg-if = "1.0"
 cstr_core = "0.2"
-
 libm = "0.2"
 libc = "0.2"
 ogc-sys = "0.1.0"
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "0.4"
 bit_field = "0.10.1"
-#lock_api = "0.4.5"
