--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ cfg-if = "1.0"
 cstr_core = "0.2"
 libm = "0.2"
 libc = "0.2"
-ogc-sys =  { git = "./ogc-sys/"}
+ogc-sys =  { path = "./ogc-sys/"}
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "1.2.2"
 bit_field = "0.10.1"
