--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ ogc-sys =  { path = "./ogc-sys/"}
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "1.2.2"
 bit_field = "0.10.1"
+bitfrob = { version = "1.3.1", default-features = false }
