--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ glam = { version = "0.19.0", default-features = false, features = ["libm"], opti
 voladdress = "1.2.2"
 bit_field = "0.10.1"
 bitfrob = { version = "1.3.1", default-features = false }
+num-traits = { version = "0.2.19", features = ["libm"], default-features = false }
