:bug: fix(Gx::set_array): Properly implement `set_array` in C instead of just doing some of them halfassed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ mmio = []
 glam_compat = ["glam"]
 default_alloc_handler = []
 default_panic_handler = []
+experimental = []
 
 [dependencies]
 bitflags = "1.3"
