--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ default_panic_handler = []
 bitflags = "1.3"
 num_enum = { version = "0.5", default-features = false }
 cfg-if = "1.0"
-libm = "0.2"
 libc = "0.2"
 ogc-sys =  { path = "./ogc-sys/"}
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "1.2.2"
 bit_field = "0.10.1"
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
