--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ crate-type = ["rlib"]
 
 
 [features]
-default = ["default_alloc_handler", "default_panic_handler"]
+default = ["mmio", "default_alloc_handler", "default_panic_handler"]
 ffi = []
 mmio = []
 glam_compat = ["glam"]
@@ -30,6 +30,6 @@ cfg-if = "1.0"
 libc = "0.2"
 ogc-sys =  { path = "./ogc-sys/"}
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
-voladdress = "1.2.2"
+voladdress = "1.4"
 bit_field = "0.10.1"
 num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
