--- a/examples/obj-loading/Cargo.toml
+++ b/examples/obj-loading/Cargo.toml
@@ -11,4 +11,4 @@ release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", o
 [dependencies]
 gctex = {path = "./vendor/gctex", default-features = false }
 minipng = { version = "0.1.1", default-features = false }
-ogc-rs = { path = "../../", features = ["ffi", "default_panic_handler"] } 
+ogc-rs = { path = "../../", features = ["mmio", "ffi", "default_panic_handler"] } 
