--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,14 @@ crate-type = ["rlib"]
 
 
 [features]
-default = ["default_alloc_handler", "default_panic_handler"]
+default = ["critical-section-wii", "default_alloc_handler", "default_panic_handler"]
 ffi = []
 mmio = []
 glam_compat = ["glam"]
 default_alloc_handler = []
 default_panic_handler = []
+critical-section-wii = ["critical-section/restore-state-u32"]
+
 
 [dependencies]
 bitflags = "1.3"
@@ -33,3 +35,5 @@ glam = { version = "0.19.0", default-features = false, features = ["libm"], opti
 voladdress = "1.4"
 bit_field = "0.10.1"
 num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
+critical-section = { version = "1.2.0", default-features = false }
+aliasable = { version = "0.1.3", default-features = false, features = ["alloc"] }
