--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ libc = "0.2"
 ogc-sys =  { path = "./ogc-sys/"}
 glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
 voladdress = "1.4"
-bit_field = "0.10.1"
+bit_field = { version = "0.10.1", default-features = false }
 num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 critical-section = { version = "1.2.0", default-features = false }
 aliasable = { version = "0.1.3", default-features = false, features = ["alloc"] }
